Fix sizing issues on smaller window sizes

--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -81,3 +81,7 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.video-column {
+  min-width: 275px;
+}
